# GeoLogViewer-FerramentaDeLeituraEVisualizacaoDeDadosGeof-sicosDeArquivos-LAS

2-Projeto-IdentificacaoDaProposta/lyx/: 2-ProjetoDetalhado-0-Capa.lyx  2-ProjetoDetalhado-0-Capa.tex  2-ProjetoDetalhado-1-Introducao-IdentificacaoDaProposta.tex  2-ProjetoDetalhado-2-RevisaoBibliografica-Tecnologica.tex  2-ProjetoDetalhado-3-Etapas-Cronograma.tex  2-ProjetoDetalhado-Master.tex
4-Execucao-Detalhamento-Construcao-Versao-1/src/: CMakeLists.txt
4-Execucao-Detalhamento-Construcao-Versao-1/src/Data/: 1-KPGL-1D-SPS_GR-RES.las
4-Execucao-Detalhamento-Construcao-Versao-1/src/src/: main.cpp
4-Execucao-Detalhamento-Construcao-Versao-1/src/src/Core/: CLASReader.cpp  CLASReader.h  CLogCurve.cpp  CLogCurve.h  CWellLog.cpp  CWellLog.h
4-Execucao-Detalhamento-Construcao-Versao-1/src/src/Interpretation/: CInterpreter.cpp
doc/ManualDoDesenvolvedor/lyx/: Cap0-Capa.lyx  Cap0-Introducao-Escopo-Objetivo.lyx
